Fixed a layout issue with flex on body

--- a/src/stylesheets/generic/_body.scss
+++ b/src/stylesheets/generic/_body.scss
@@ -1,4 +1,5 @@
 body {
+  align-content: flex-start;
   display: grid;
   min-height: 100vh;
 }
